updated Navbar. It now include HTML5 syntax <nav>, & I also changed the id from headerContainer -> navContainer. I also fixed up the responsive CSS for sidebar on mobiles. Lastly, added data-type-and-variables section

--- a/public/common/topnav/topnav.css
+++ b/public/common/topnav/topnav.css
@@ -1,12 +1,12 @@
 body {margin:0; padding: 0;}
 
 /* Navbar */
-.topnav {
+nav {
 	overflow: hidden;
 	background-color: #013a65;
 }
 
-.topnav button, .topnav p {
+nav button, nav p {
 	color: #f2f2f2;
 	text-decoration: none;
 	font-size: 1rem;
@@ -18,7 +18,7 @@ body {margin:0; padding: 0;}
 	padding: 0rem 1rem;
 }
 
-.topnav p { 
+nav p { 
 	float: left;
 	font-size: 40px;
     float: left;
@@ -26,12 +26,7 @@ body {margin:0; padding: 0;}
 	display: block;
 }
 
-#headerContainer {
-	float: right;
-	display: block;
-}
-
-.topnav button {
+nav button {
 	display: inline-block;
 	border: 0px solid red;
 }
@@ -42,38 +37,28 @@ body {margin:0; padding: 0;}
 	font-size: 30px;
 }
 
-#headerContainer button:hover {
+#navContainer {
+	float: right;
+	display: block;
+}
+
+#navContainer button:hover {
 	text-decoration: underline;
 	cursor: pointer;
 }
 
+#navContainer button:hover {
+	color: #e6f2ff !important;
+}
+
 @media screen and (max-width: 768px) {
 	
-	.topnav {
+	.nav {
 		border-bottom: 5px solid black;
 	}
 	
-	.topnav button, .topnav p {
-		width: 50%;
-		
-    }
-	
-	#headerContainer {
-		width: 100%;
-		float: left;
-		display: none;
-	}
-	
-	#headerContainer button {
-		width: 100%;
-		
-	}
-	
-	#headerContainer button:hover {
-		border: 1px solid white;
-		//border-bottom: 1px solid white;
-		text-decoration: none;
-		color: white;
+	.nav button, .nav p {
+		width: 50%;	
 	}
 	
 	#icon {
@@ -88,5 +73,21 @@ body {margin:0; padding: 0;}
 		cursor: pointer;
 		color: #a0a0a0;
 	}
-    
+	
+	#navContainer {
+		width: 100%;
+		float: left;
+		display: none;
+	}
+	
+	#navContainer button {
+		width: 100%;	
+	}
+	
+	#navContainer button:hover {
+		border: 1px solid white;
+		//border-bottom: 1px solid white;
+		text-decoration: none;
+	}
+
 }
